--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.3",
     "vue": "^3.0.0",
+    "vue-material-design-icons": "^4.11.0",
     "vue-router": "^4.0.2",
     "vuex": "^4.0.0-rc.2"
   },
