--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.3",
-    "moment": "^2.29.1",
+    "primeicons": "^4.1.0",
     "vue": "^3.0.0",
-    "vue-material-design-icons": "^4.11.0",
     "vue-router": "^4.0.2",
     "vuex": "^4.0.0-rc.2"
   },
@@ -29,8 +28,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2"
+    "prettier": "^1.19.1"
   }
 }
