--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.10.3",
     "mdue": "^0.1.4",
     "primeicons": "^4.1.0",
+    "primevue": "^3.1.1",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.2",
